update: login screen responsive

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,15 +18,16 @@
 .form-container {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* Para colocar el copyrigth abajo */
   justify-content: center;
   align-items: center;
-  padding: relative;
+  padding: 2rem;
+  position: relative; /* Para posicionar el copyright */
 }
 
 /* La caja azul del formulario */
 .login-box {
-  background-color: var(--logipulse-dark-blue);
+  background-color: var(--logipulse-dark-blue); /* Usa el color de style.css */
   color: white;
   padding: 2.5rem;
   border-radius: 25px;
@@ -39,7 +40,7 @@
 .logo {
   display: block;
   margin: 0 auto 1rem auto;
-  height: 70px;
+  height: 90px;
 }
 
 h2, .slogan, h3 {
@@ -55,15 +56,16 @@ h2 {
 
 .slogan {
   font-size: 1rem;
+  font-style: italic;
   margin-top: 0.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-weight: 400;
 }
 
 h3 {
   font-size: 1.5rem;
   font-weight: 600;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 /* Estilos de Formulario */
@@ -94,6 +96,7 @@ input[type="password"] {
   margin-top: 0.5rem;
   margin-bottom: 2rem;
   text-align: left;
+  font-style: italic;
 }
 
 .button-group {
@@ -107,6 +110,8 @@ input[type="password"] {
   padding: 1.25rem 0 !important;
   font-family: var(--logipulse-font);
   font-weight: 600;
+  min-height: 48px;
+  margin: 0.5rem 0;
  }
 
  .btn-login {
@@ -115,7 +120,7 @@ input[type="password"] {
  }
 
  .btn-register {
-  background-color: var(--logipulse-light-blue);
+  background-color: var(--logipulse-ligth-blue);
   color: #000000;
  }
 
@@ -125,4 +130,58 @@ input[type="password"] {
   bottom: 1.5rem;
   color: #aaa;
   font-size: 0.8rem;
+}
+
+/* Moviles y Tablets */
+@media(max-width: 992px) {
+  /* Desaparece la Imagen */
+  .image-container {
+    display: none;
+  }
+
+  /* la caja de login */
+  .form-container {
+    flex: 1;
+    padding: 1.5rem;
+  }
+
+  .login-box {
+    max-width: 90%;
+    width: 100%;
+    padding: 1.5rem;
+  }
+
+  /* Adaptacion de titulos */
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+
+  .button-group {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  input[type="email"],
+  input[type="password"] {
+    font-size: 1.1rem;
+    padding: 1rem;
+  }
+
+  /* Diseño pantallas grandes */
+  .login-container {
+    display: flex;
+    height: 100vh;
+  }
+
+  .image-container {
+    flex: 1.5;
+  }
+
+  .form-container {
+    flex: 1;
+  }
 }
