--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <div class="image-container" role="presentation" aria-hidden="true"></div>
     <div class="form-container">
       <div class="login-box" role="main">
-        <img src="assets/loginpulse-logo.png" alt="LogiPulse Logo" class="logo">
+        <img src="/assets/Logisyn.png" alt="LogiPulse Logo" class="logo">
 
         <h2>LogiPulse</h2>
         <p class="slogan">EL PULSO DE TU LOGISTICA</p>
         <h3>Inicio de Sesion</h3>
 
-        <form>
+        <form aria-label="Formulario de inicio de sesión de LogiPulse">
           <label for="email">Correo Electronico:</label>
           <input id="email" type="email" placeholder="correo@electronico.com">
 
@@ -24,6 +24,6 @@
         </form>
       </div>
 
-      <span class="copyright">LOGISYN 2025</span>
+      <span class="copyright" aria-hidden="true">LOGISYN® 2025</span>
   </div>
 </div>
