--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@
 /* Columnna de la imagen*/
 .image-container {
   flex: 1.5;
-  background-image: url('/assets/logi-bg.jpg');
+  background-image: url('/assets/login-bg.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -40,7 +40,7 @@
 .logo {
   display: block;
   margin: 0 auto 1rem auto;
-  height: 90px;
+  height: 120px;
 }
 
 h2, .slogan, h3 {
@@ -86,6 +86,34 @@ input[type="password"] {
   box-sizing: border-box;
   font-family: var(--logipulse-font);
   font-size: 1rem;
+}
+
+/* Estilos del Mensaje de Error */
+.error-message {
+  color: #ffcccc;
+  font-size: 0.8rem;
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
+  padding-left: 0.2rem;
+  text-align: left;
+}
+
+/* Resaltar Campos Invalidos */
+input.ng-invalid.ng-touched {
+  border: 2px solid #ff6666;
+  background-color: #ffe0e0;
+  color: black;
+}
+
+.button-group btn-login[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: black !important;
+}
+
+.mat-mdc-raised-button[disabled], .mat-mdc-raised-button.mat-mdc-button-disabled {
+  background-color: rgb(106, 105, 105) !important;
+  color: rgb(219, 215, 215) !important;
 }
 
 .forgot-password {
