--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,27 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" aria-label="Formulario de inicio de sesión de LogiPulse">
           <label for="email">Correo Electronico:</label>
           <input id="email" formControlName="correoElectronico" type="email" placeholder="correo@electronico.com">
+          <ng-container *ngIf="loginForm.get('correoElectronico')?.invalid && (loginForm.get('correoElectronico')?.dirty || loginForm.get('correoElectronico')?.touched)">
+            <p class="error-message" *ngIf="loginForm.get('correoElectronico')?.errors?.['required']">
+              El correo electrónico es <b>obligatorio</b>.
+            </p>
+            <p class="error-message" *ngIf="loginForm.get('correoElectronico')?.errors?.['email']">
+              El formato de correo no es <b>válido</b>.
+            </p>
+          </ng-container>
 
           <label for="password">Contraseña:</label>
           <input id="password" type="password" formControlName="contrasena" placeholder="••••••••">
+          <ng-container *ngIf="loginForm.get('contrasena')?.invalid && (loginForm.get('contrasena')?.dirty || loginForm.get('contrasena')?.touched)">
+            <p class="error-message" *ngIf="loginForm.get('contrasena')?.errors?.['required']">
+              La contraseña es <b>obligatoria</b>.
+            </p>
+            <p class="error-message" *ngIf="loginForm.get('contrasena')?.errors?.['minlength']">
+              La contraseña debe tener al menos <b>6 caracteres</b>.
+            </p>
+          </ng-container>
 
-          <a href="#" class="forgot-password">¿Olvidaste tu Contraseña?</a>
+          <a href="#" class="forgot-password"><b>¿Olvidaste tu Contraseña?</b></a>
 
           <div class="button-group">
             <button mat-raised-button class="btn-login" type="submit" [disabled]="loginForm.invalid">Inicio de Sesion</button>
