update: login and register component almost working completely

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -11,3 +11,7 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+@if (LoaderService.isLoading()) {
+  <app-loader></app-loader>
+}
