--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<main style="position: relative; overflow: hidden; min-height: 100vh;">
+  <div [@routeAnimations]="getRouteAnimationData()">
+    <router-outlet></router-outlet>
+  </div>
+</main>
