--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,3 +1,4 @@
+/* Contenedor principal */
 .register-container {
   display: flex;
   overflow:auto;
@@ -24,6 +25,15 @@
   box-sizing: border-box;
 }
 
+/* Grid de Formulario */
+.form-grid {
+  display: grid;
+  grid-template-columns: 1fr; /* Una columna por defecto (Móvil) */
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+/* Logo del la empresa */
 .logo-wrapper {
   position: absolute;
   top: -50px;
@@ -42,62 +52,39 @@
   display: block;
 }
 
+/* Fuentes */
 h2, h3, .slogan {
   text-align: center;
+  font-family: var(--logipulse-font);
+}
+
+h2 {
+  font-size: 2.2rem;
+  font-weight: 700;
   margin: 0;
 }
 
-h2 { font-size: 2.2rem; margin-top: 20px; }
-.slogan { font-size: 0.9rem; margin-bottom: 20px; font-weight: 300; letter-spacing: 1px; }
-h3 { margin-bottom: 30px; font-weight: 500; }
 
-/* Grid de Formulario */
-.form-grid {
-  display: grid;
-  grid-template-columns: 1fr; /* Una columna por defecto (Móvil) */
-  gap: 20px;
-  margin-bottom: 30px;
+.slogan {
+  font-size: 1rem;
+  font-style: italic;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  font-weight: 600;
 }
 
 /* Estilos del Formulario */
 .form-field label {
   display: block;
-  margin-bottom: 0.9rem;
   font-size: 0.9rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
-}
-
-/* Contenedor del Input con icono */
-.input-wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-/* Estilos del Icono */
-.icon-toggle {
-  position: absolute;
-  left: 10px;
-  color: #666;
-  cursor: pointer;
-  user-select: none;
-  z-index: 2;
-  font-size: 20px;
-}
-
-/* Ajuste del Input para no tapar el Icono */
-.input-with-icon {
-  width: 100%;
-  padding: 12px 12px 12px 40px !important;
-  border-radius: 10px;
-  border: none;
-  font-family: var(--logipulse-font);
-  box-sizing: border-box;
-}
-
-.icon-toggle:hover {
-  color: var(--logipulse-dark-blue);
 }
 
 .form-field input {
@@ -113,6 +100,42 @@ h3 { margin-bottom: 30px; font-weight: 500; }
   text-transform: uppercase;
 }
 
+/* Contenedor del Input con icono */
+.input-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+/* Estilos del Icono */
+.icon-toggle {
+  position: absolute;
+  left: 12px;
+  color: #666;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  z-index: 5;
+  font-size: 20px;
+}
+
+/* Ajuste del Input para no tapar el Icono */
+.input-with-icon {
+  width: 100%;
+  padding: 12px 12px 12px 40px !important;
+  border-radius: 10px;
+  border: none;
+  font-family: var(--logipulse-font);
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+
+/* Efecto al pasar el mouse por el icono */
+.icon-toggle:hover {
+  color: var(--logipulse-dark-blue);
+}
+
+/* Estilos del Mensaje de Error */
 .error-message {
   color: #ffcccc;
   font-size: 0.8rem;
@@ -122,6 +145,7 @@ h3 { margin-bottom: 30px; font-weight: 500; }
   text-align: left;
 }
 
+/* Resaltar Campos Invalidos */
 input.ng-invalid.ng-touched {
   border: 2px solid #ff6666;
   background-color: #ffe0e0;
@@ -196,7 +220,7 @@ input.ng-invalid.ng-touched {
 /* Desktop (1024px hacia arriba) */
 @media (min-width: 1024px) {
   .register-box {
-    max-width: 850px;
-    padding: 50px 60px;
+    max-width: 900px;
+    padding: 60px 70px;
   }
 }
