feat: new method 'getPerfil' created

--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -43,7 +43,7 @@
   align-items: center;
   color: white;
 }
-.blue { background-color: #00b0e9; }
+.blue { background-color: #20579e }
 .dark-blue { background-color: #1a3765; }
 .blue-gradient { background: linear-gradient(135deg, #1a3765, #00b0e9); }
 
