--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <div class="header-welcome div1">
     <h1>{{ saludo() }}</h1>
     <h2 class="company-name">{{ empresaData()?.nombreEmpresa || 'Cargando...' }}</h2>
-    <span class="role-tag">Administrador LogiPulse</span>
+    <span class="role-tag">Administrador</span>
   </div>
 
   <div class="search-container div7">
@@ -14,23 +14,29 @@
   </div>
 
   <div class="kpi-card div4">
-    <div class="kpi-icon blue"><mat-icon>domain</mat-icon></div>
+    <div class="kpi-icon blue">
+      <mat-icon>domain</mat-icon>
+    </div>
     <div class="kpi-content">
-      <p>Total de Servicios</p>
+      <p>Unidades Disponibles</p>
       <h3>600</h3>
     </div>
   </div>
 
   <div class="kpi-card div5">
-    <div class="kpi-icon dark-blue"><mat-icon>description</mat-icon></div>
+    <div class="kpi-icon dark-blue">
+      <mat-icon>description</mat-icon>
+    </div>
     <div class="kpi-content">
-      <p>Cotizaciones</p>
+      <p>Total de Servicios</p>
       <h3>75</h3>
     </div>
   </div>
 
   <div class="kpi-card div6">
-    <div class="kpi-icon blue-gradient"><mat-icon>insert_chart</mat-icon></div>
+    <div class="kpi-icon blue-gradient">
+      <mat-icon>insert_chart</mat-icon>
+    </div>
     <div class="kpi-content">
       <p>Ingresos</p>
       <h3>55,000.00</h3>
