--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 :root {
   --logipulse-dark-blue: #1a3765;
-  --logipulse-medium-blue: ##20579e;
+  --logipulse-medium-blue: #20579e;
   --logipulse-ligth-blue: #00b0e9;
 
   --logipulse-font: 'Montserrat', sans-serif;
