--- a/src/app/components/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/components/custom-sidenav/custom-sidenav.component.html
@@ -7,7 +7,7 @@
         src="/assets/Logisyn.png"
       />
       <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-        <h2>Tu empresa</h2>
+        <h2>{{ empresaData()?.nombreEmpresa || 'Cargando...' }}</h2>
         <p>Tu rol</p>
       </div>
     </div>
